# arkitekt-server

./: .gitignore  .gitmodules  CHANGELOG.md  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: tests.yaml
arkitekt_server/: __init__.py  config.py  create.py  diff.py  logo.py  main.py  utils.py  wizard.py
configs/: README.md  fluss.yaml  lok.yaml  mikro.yaml  minio.yaml  port.yaml  rekuest.yaml
fakts/: README.md
fakts/templates/: generic.yaml
tests/: test_generate.py  test_programmatic.py  test_vitality.py  utils.py
there/: docker-compose.yaml
there/configs/: Caddyfile  fluss.yaml  kabinet.yaml  kraph.yaml  lok.yaml  mikro.yaml  minio_init.yaml  rekuest.yaml
